Fix: Has been fixed the paragraph y overflow

--- a/beyond-slate-editor/modules/home/sass/styles.scss
+++ b/beyond-slate-editor/modules/home/sass/styles.scss
@@ -63,6 +63,7 @@
         font-size: 1.2rem;
         margin: .2rem;
         display: inline-block;
+        max-width: 100%;
       }
 
       br {
